--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier": "eslint . --fix"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.1.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.1",
     "rn-round-checkbox": "^0.3.4"
   },
   "devDependencies": {
@@ -21,6 +25,7 @@
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
     "eslint": "6.1.0",
+    "eslint-config-react-native-prettier": "^1.0.1",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
